Added style.css & finished milestone-1.html

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -15,7 +15,7 @@
 <p><ul>The primary goal is for people to view my technical skills and be able to connect with me for potential job opportunities via social media profiles or LinkedIn. </ul></p>
 
 <h1>Persona</h1>
-<h3>As a user, I need to make sure I portray quality work so customers want to to hire me for commissioned work.</h3>
+<h3>As a user, I need to make sure I show quality work so customers want to to hire me for commissioned work.</h3>
 <p>Name: Marcus Narro</p>
 <p>Age: 37</p>
 <img src="Marcus-photo.jpg">
