Deleted marcus's photo, updated milestone-1.html w/ diff persona

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -8,22 +8,22 @@
 <body>
 
 <h2>Purpose</h2>
-<p><ul>This project will be a professional portfolio piece showcasing my front-end web development skills by creating a mobile-first responsive website.</ul></p>
+<p><ul>This is a website for my partner Marcus to help him build a side-gig by getting more exposure for his work and attract clients.</ul></p>
 <h2>Audience</h2>
-<p><ul>This will be viewed by potential employers, professional peers, and recruiters in the community.</ul></p>
+<p><ul>This site is designed for people who are looking for quality woodwork pieces and is targeted at individuals who also want to support local businesses. </ul></p>
 <h2>Goal</h2>
-<p><ul>The primary goal is for people to view my technical skills and be able to connect with me for potential job opportunities via social media profiles or LinkedIn. </ul></p>
+<p><ul>The goal of this site is for people to contact him for commissioned pieces of work, increase his clientele base and increase sales.</ul></p>
 
 <h1>Persona</h1>
-<h3>As a user, I need to make sure I show quality work so customers want to hire me for commissioned work.</h3>
-<p>Name: Marcus Narro</p>
-<p>Age: 37</p>
-<img src="Marcus-photo.jpg">
-<p>Job: Full time project coordinator at Lowe's while trying to start up a side-gig doing commissioned woodwork.</p>
-<p>Technology: Windows power user. Uses Microsoft Surface laptop, Mozilla Firefox, and Samsung Galaxy S10</p>
-<p>Behaviors & attitudes:Works full-time currently but has time on the weekends for his side-gig. The woodshop he works out of was his grandfather’s, so it has a lot of sentimental value and he loves spending time there. Marcus has a passion for woodworking and doesn’t look at it as a side job but rather his dream. He is just starting out so is eager to share his passion and work with the community. He has a large network and knows a decent amount of people in Albuquerque since he grew up here. He is not a huge social media user but will post pictures of his work from time to time, especially when he’s created something new.</p>
-<p>Frustrations & needs: Marcus wishes the shop was a little closer but it’s not a huge deal. He shares the woodshop with his uncle, who owns the bigger tools. Sometimes his uncle gets pretty picky about the way Marcus uses the tools so he doesn’t have free range of everything. </p>
-<p>Goals for the site: Marcus's goal is to show the products he has made, get more exposure and attract clients. He would also like to eventually try to generate decent income from this side-gig.</p>
+<h3>As a user, I want to find quality wood work while supporting a local business.</h3>
+<p>Name: Irene Lenard</p>
+<p>Age: 50</p>
+<img src="https://www.oldrepublictitle.com/employeephoto/thumbnail/b622aa58-4b63-4c95-ad26-57570453a0f0">
+<p>Job: Escrow officer</p>
+<p>Technology: Windows casual user. Uses all in one Dell desktop with Google Chrome and Galaxy S10 with unlimited data</p>
+<p>Behaviors & attitudes: Works full-time and is very busy. She has an appreciation for art, especially quality artwork that has attention to detail. She loves projects and is constantly looking to update parts of her house to give it a modern look. She doesn’t have any problem paying for custom pieces of work. She also isn’t the most technology savvy person and prefers more personal interactions.</p>
+<p>Frustrations & needs: People in New Mexico who tend to drag their feet. Since she is very busy, she can’t work with people that take their sweet time. New Mexicans also tend to be late to meetings and are slow to respond. Irene also gets irritated when people don't show up for meetings. She can be picky at times and can be quick to change her mind.</p>
+<p>Goals for the site: Irene’s goal is to find someone detail-oriented and reliable to build a custom dining room table to replace her old one.</p>
 
 
 
