Updated with errors from validator website

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -8,23 +8,33 @@
 <body>
 
 <h2>Purpose</h2>
-<p><ul>This is a website for my partner Marcus to help him build a side-gig by getting more exposure for his work and attract clients.</ul></p>
+<p>This is a website for my partner Marcus to help him build a side-gig by getting more exposure for his work and
+    attract clients. </p>
 <h2>Audience</h2>
-<p><ul>This site is designed for people who are looking for quality woodwork pieces and is targeted at individuals who also want to support local businesses. </ul></p>
+<p>This site is designed for people who are looking for quality woodwork pieces and is targeted at individuals who also
+    want to support local businesses.</p>
 <h2>Goal</h2>
-<p><ul>The goal of this site is for people to contact him for commissioned pieces of work, increase his clientele base and increase sales.</ul></p>
+<p>The goal of this site is for people to contact him for commissioned pieces of work, increase his clientele base and
+    increase sales. </p>
 
 <h1>Persona</h1>
 <h3>As a user, I want to find quality wood work while supporting a local business.</h3>
 <p>Name: Irene Lenard</p>
 <p>Age: 50</p>
-<img src="https://www.oldrepublictitle.com/employeephoto/thumbnail/b622aa58-4b63-4c95-ad26-57570453a0f0">
+<img src="https://www.oldrepublictitle.com/employeephoto/thumbnail/b622aa58-4b63-4c95-ad26-57570453a0f0" alt="Irene Lenard">
 <p>Job: Escrow officer</p>
-<p>Technology: Windows casual user. Uses all in one Dell desktop with Google Chrome and Galaxy S10 with unlimited data</p>
-<p>Behaviors & attitudes: Works full-time and is very busy. She has an appreciation for art, especially quality artwork that has attention to detail. She loves projects and is constantly looking to update parts of her house to give it a modern look. She doesn’t have any problem paying for custom pieces of work. She also isn’t the most technology savvy person and prefers more personal interactions.</p>
-<p>Frustrations & needs: People in New Mexico who tend to drag their feet. Since she is very busy, she can’t work with people that take their sweet time. New Mexicans also tend to be late to meetings and are slow to respond. Irene also gets irritated when people don't show up for meetings. She can be picky at times and can be quick to change her mind.</p>
-<p>Goals for the site: Irene’s goal is to find someone detail-oriented and reliable to build a custom dining room table to replace her old one.</p>
-
+<p>Technology: Windows casual user. Uses all in one Dell desktop with Google Chrome and Galaxy S10 with unlimited
+    data</p>
+<p>Behaviors & attitudes: Works full-time and is very busy. She has an appreciation for art, especially quality artwork
+    that has attention to detail. She loves projects and is constantly looking to update parts of her house to give it a
+    modern look. She doesn’t have any problem paying for custom pieces of work. She also isn’t the most technology savvy
+    person and prefers more personal interactions.</p>
+<p>Frustrations & needs: People in New Mexico who tend to drag their feet. Since she is very busy, she can’t work with
+    people that take their sweet time. New Mexicans also tend to be late to meetings and are slow to respond. Irene also
+    gets irritated when people don't show up for meetings. She can be picky at times and can be quick to change her
+    mind.</p>
+<p>Goals for the site: Irene’s goal is to find someone detail-oriented and reliable to build a custom dining room table
+    to replace her old one.</p>
 
 
 </body>
