--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -8,15 +8,13 @@
 <h1>Content Strategy</h1>
 <p>The URL to his website will be named www.narrowoodworking.com</p>
 
-<p>There will be a banner of his logo/signature that spans the width of the page and on the bottom right corner it will have his name.</p>
+<p>There will be a banner of his logo/signature that spans the width of the page and there will be some photos that will change by fading in and out</p>
 
 <h3>About Me:</h3>
     <p>This section is still a rough draft -- I am a native New Mexican born and raised here in Albuquerque. Growing up, I spent a lot of my time with both my grandfathers, which helped foster my love for art. On my mother's side, my grandfather had his own contracting company and built homes in the greater Albuquerque area. In his free time, he loved to paint beautiful pictures. On my father's side, he was a retired airman and spent a lot of his time carving statues, religious symbols and landscapes out of wood. As I've gotten older, my passion for wood working has only gotten stronger. After being away for the last decade or so, I finally moved back to the Southwest. My paternal grandfather's old wood shop is still next to the adobe house he built for my grandmother today. Since I've been back, I've taken advantage of the space to build quality pieces of work. I hope my passion and the thought put into these pieces will being as much joy to others as it has brought me to make them.
     </p>
 <h3>Portfolio:</h3>
     <p>I want this part to have an image gallery containing a couple examples of his work. There will be a handful of pictures with a brief caption underneath the photos.</p>
-<h3>Behind the scenes:</h3>
-    <p>This will have a couple of photos of him at the shop or works in progress.</p>
 <h3>Reviews:</h3>
     <p>This section will have some reviews/ testimonials from people who have commissioned a piece of work from him. </p>
 <h3>Contact:</h3>
