added wireframes to html

--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -8,7 +8,7 @@
 <h1>Content Strategy</h1>
 <p>The URL to his website will be named www.narrowoodworking.com</p>
 
-<p>There will be a banner of his logo/signature that spans the width of the page and there will be a photo in the background.</p>
+<p>There will be a banner of his logo/signature in the middle and there will be a photo in the background.</p>
 
 <h3>About Me:</h3>
     <p>This section is still a rough draft -- I am a native New Mexican born and raised here in Albuquerque. Growing up, I spent a lot of my time with both my grandfathers, which helped foster my love for art. On my mother's side, my grandfather had his own contracting company and built homes in the greater Albuquerque area. In his free time, he loved to paint beautiful pictures. On my father's side, he was a retired airman and spent a lot of his time carving statues, religious symbols and landscapes out of wood. As I've gotten older, my passion for wood working has only gotten stronger. After being away for the last decade or so, I finally moved back to the Southwest. My paternal grandfather's old wood shop is still next to the adobe house he built for my grandmother today. Since I've been back, I've taken advantage of the space to build quality pieces of work. I hope my passion and the thought put into these pieces will being as much joy to others as it has brought me to make them.
@@ -24,3 +24,6 @@
 
 </body>
 </html>
+
+<p><img src="desktop-wireframe.png"</p>
+<p><img src="mobile-wireframe.png"</p>
