updated milestone-2 & stylesheet

--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -25,5 +25,5 @@
 </body>
 </html>
 
-<p><img src="desktop-wireframe.png"</p>
-<p><img src="mobile-wireframe.png"</p>
+<p><img src="desktop-wireframe.png" alt="desktop wireframe"</p>
+<p><img src="mobile-wireframe.png" alt="mobile wireframe"</p>
