--- a/public_html/documentation/milestone-3.html
+++ b/public_html/documentation/milestone-3.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <script src="https://use.fontawesome.com/405b0be7d3.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="style.css">
@@ -43,27 +44,19 @@
     </div>
 </section>
 
-<svg class="bi" width="32" height="32" fill="currentColor">
-    <use xlink:href="bootstrap-icons.svg#heart-fill"/>
-</svg>
-<svg class="bi" width="32" height="32" fill="currentColor">
-    <use xlink:href="bootstrap-icons.svg#toggles"/>
-</svg>
-<svg class="bi" width="32" height="32" fill="currentColor">
-    <use xlink:href="bootstrap-icons.svg#shop"/>
-</svg>
-
 <!-- About section -->
-<section class="About py-5">
+<section class="About py-4">
     <div class="container-fluid">
-        <div class="inline-flex row mx-5">
-            <div class="col-md-4 mx-3 mx-md-0 py-1">
-                <img id="marcus-photo" class="img-fluid display-flex mx-auto min-vw-20"
+        <div class="inline-flex row mx-5 pt-3">
+<!--            Marcus photo column-->
+            <div class="col-lg-3 col-md-4 mx-5 mx-md-0 py-1">
+                <img id="marcus-photo" class="img-fluid display-flex mx-auto"
                      src="marcus-photo.jpg" alt="marcus photo">
             </div>
-            <div class="col-md-8 pl-md-3 mt-md-3 py-1">
-                <h3 id="hi" class="mt-3">About me:</h3>
-                <p class="lead">I am a native New Mexican born and raised here in Albuquerque.
+<!--            About me column-->
+            <div class="col-lg-9 col-md-8 pl-5 ">
+                <h3 id="hi" class="">About me:</h3>
+                <p class="lead m">I am a native New Mexican born and raised here in Albuquerque.
                     Growing up, I spent a lot of my time with both my grandfathers, which helped foster my love for art.
                     On my mother's side, my grandfather had his own contracting company and built homes in the greater
                     Albuquerque area. In his free time, he loved to paint beautiful pictures. On my father's side, he
@@ -81,44 +74,44 @@
 <!--lightbox gallery-->
 <div class="container gallery">
     <div id="gallery-row" class="row">
-        <a href="brush-stand-brush.jpeg" data-toggle="lightbox"
-           class="col-md-4 each-pic">
-            <img src="brush-stand-brush.jpeg" class="img-fluid rounded">
+        <a href="brush-stand-brush.jpeg" data-toggle="lightbox" data-gallery="gallery"
+           class="col-md-4 ">
+            <img src="brush-stand-brush.jpeg" class="img-fluid rounded shadow-lg each-pic">
         </a>
         <a href="shaving-brush-stand.jpeg" data-toggle="lightbox" data-gallery="gallery"
-           class="col-md-4 each-pic">
-            <img src="shaving-brush-stand.jpeg" class="img-fluid rounded">
+           class="col-md-4">
+            <img src="shaving-brush-stand.jpeg" class="img-fluid rounded shadow-lg each-pic">
         </a>
         <a href="straightrazorstand.jpeg" data-toggle="lightbox" data-gallery="gallery"
-           class="col-md-4 each-pic">
-            <img src="straightrazorstand.jpeg" class="img-fluid rounded">
+           class="col-md-4 ">
+            <img src="straightrazorstand.jpeg" class="img-fluid rounded shadow-lg each-pic">
         </a>
     </div>
     <div id="gallery-row" class="row">
         <a href="coasters.jpeg" data-toggle="lightbox" data-gallery="gallery"
-           class="col-md-4 each-pic">
-            <img src="coasters.jpeg" class="img-fluid rounded">
+           class="col-md-4">
+            <img src="coasters.jpeg" class="img-fluid rounded each-pic">
         </a>
-        <a href="espresso%20coaster.jpeg" data-toggle="lightbox" data-gallery="gallery"
-           class="col-md-4 each-pic">
-            <img src="espresso%20coaster.jpeg" class="img-fluid rounded">
+        <a href="espresso-coaster.jpg" data-toggle="lightbox" data-gallery="gallery"
+           class="col-md-4 ">
+            <img src="espresso-coaster.jpg" class="img-fluid rounded each-pic">
         </a>
-        <a href="espresso%20coaster.jpeg" data-toggle="lightbox" data-gallery="gallery"
-           class="col-md-4 each-pic">
-            <img src="espresso%20coaster.jpeg" class="img-fluid rounded">
+        <a href="espresso-coaster.jpg" data-toggle="lightbox" data-gallery="gallery"
+           class="col-md-4 ">
+            <img src="espresso-coaster.jpg" class="img-fluid rounded each-pic">
         </a>
         <div id="gallery-row" class="row">
             <a href="landscape.jpeg" data-toggle="lightbox" data-gallery="gallery"
-               class="col-md-4 each-pic">
-                <img src="landscape.jpeg" class="img-fluid rounded">
+               class="col-md-4">
+                <img src="landscape.jpeg" class="img-fluid rounded  each-pic">
             </a>
             <a href="diploma-frames.jpg" data-toggle="lightbox" data-gallery="gallery"
-               class="col-md-4 each-pic">
-                <img src="diploma-frames.jpg" class="img-fluid rounded">
+               class="col-md-4 ">
+                <img src="diploma-frames.jpg" class="img-fluid rounded each-pic">
             </a>
             <a href="frame.jpeg" data-toggle="lightbox" data-gallery="gallery"
-               class="col-md-4 each-pic">
-                <img src="frame.jpeg" class="img-fluid rounded">
+               class="col-md-4 ">
+                <img src="frame.jpeg" class="img-fluid rounded each-pic">
             </a>
         </div>
     </div>
@@ -126,12 +119,12 @@
 
 <!--Behind the scenes-->
 <section id="gallery">
-<div class="container">
+<div class="container-fluid">
     <!-- Heading -->
     <h2 class="mb-5 font-weight-bold text-center">Behind the Scenes</h2>
 
     <!--Grid row-->
-    <div class="row my-5">
+    <div class="row my-5 justify-content-center">
 
         <!--Grid column-->
         <div id="left column" class="col-md-6 mb-4">
@@ -155,7 +148,7 @@
                     <!--/First slide-->
                     <!--Second slide-->
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="drilling2.jpg"
+                        <img class="d-block w-100" src="drilling.jpg"
                              alt="Second slide">
                     </div>
                     <!--/Second slide-->
@@ -183,8 +176,8 @@
         </div>
         <!--Grid column-->
 
-        <!--Grid column-->
-            <div id="right-column" class="col-md-5 overflow-auto mx-1">
+        <!--Testimonial Grid column-->
+            <div id="right-column" class="col-md-5 overflow-auto">
 
                 <!--Testimonials-->
                 <h4 class="mb-3 "><strong>Testimonials</strong></h4>
@@ -224,52 +217,54 @@
 <!-- Contact Form -->
 <div class="container">
     <div class="row">
-        <div id="formheight" class="col-md-8 col-lg-5 mx-3 mb-3">
+        <div id="formheight" class="col-lg-8 mx-3 mb-3">
             <h3>Contact form</h3>
             <form id="contact-form" action="php/mailer.php" method="post" novalidate="novalidate">
+<!--                name line-->
                 <div class="form-group">
-                    <label for="name">Name</label>
-                    <div class="input-group">
+                  <div class="input-group">
                         <div class="input-group-addon">
-                            <i class="fa fa-user" aria-hidden="true"></i>
+                            <i class="fa fa-user fa-fw" aria-hidden="true"></i>
                         </div>
-                        <input type="text" class="form-control" name="name" id="name" placeholder=" ">
+                        <input type="text" class="form-control" placeholder="Your Name">
                     </div>
                 </div>
+<!--                email address-->
                 <div class="form-group">
-                    <label for="emailAddress">Email </label>
                     <div class="input-group">
                         <div class="input-group-addon">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                            <i class="fa fa-envelope fa-fw" aria-hidden="true"></i>
                         </div>
-                        <input type="email" class="form-control" name="email" id="email" placeholder=" ">
+                        <input type="text" class="form-control" placeholder="Your Email">
                     </div>
                 </div>
+
+<!--                phone number-->
                 <div class="form-group">
-                    <label for="subject">Subject</label>
                     <div class="input-group">
                         <div class="input-group-addon">
-                            <i class="fa fa-pencil" aria-hidden="true"></i>
+                            <i class="fa fa-phone-square fa-fw" aria-hidden="true"></i>
                         </div>
-                        <input type="text" class="form-control" name="subject" id="subject" placeholder=" ">
+                        <input type="text" class="form-control" placeholder="Your Number">
                     </div>
                 </div>
+<!--                message box-->
                 <div class="form-group">
-                    <label for="message">Message</label>
                     <div class="input-group">
                         <div class="input-group-addon">
-                            <i class="fa fa-comment" aria-hidden="true"></i>
+                            <i class="fa fa-comment fa-fw" aria-hidden="true"></i>
                         </div>
-                        <textarea class="form-control" name="message" id="message" rows="5"
+                        <textarea class="form-control" rows="3"
                                   placeholder="What can I make for you?"></textarea>
                     </div>
                 </div>
+
                 <!-- reCAPTCHA -->
-                <div class="g-recaptcha" data-sitekey="6Len6C4UAAAAALlI_mfpckSkYBVIoGBToYG9B2W6">
+                <div class="g-recaptcha ml-4" data-sitekey="6Len6C4UAAAAALlI_mfpckSkYBVIoGBToYG9B2W6">
                     <div style="width: 304px; height: 78px;">
                         <div>
                             <iframe src="https://www.google.com/recaptcha/api2/anchor?ar=2&amp;k=6Len6C4UAAAAALlI_mfpckSkYBVIoGBToYG9B2W6&amp;co=aHR0cHM6Ly9jdXN0b21kZXB0LmNvbTo0NDM.&amp;hl=en&amp;v=_KUxfxvAoJ4k7SaKyLbja4Mi&amp;size=normal&amp;cb=vlmwzci86qmz"
-                                    width="304" height="78" role="presentation" name="a-eyxe4awkgfp3" frameborder="0"
+                                    width="305" height="78" role="presentation" name="a-eyxe4awkgfp3" frameborder="0"
                                     scrolling="no"
                                     sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox"></iframe>
                         </div>
@@ -279,53 +274,40 @@
                     <iframe style="display: none;"></iframe>
                 </div>
                 <!--empty area for form error/success output-->
-                <div class="row" id="">
+                <div class="row mt-2" id="">
                     <div class="col-xs-12">
                         <div id="output-area"></div>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary">send</button>
-            </form>
-        </div>
+<div class="send">
 
-<!--my info-->
-        <div class="col-md-3 col-lg-6 mx-3 align-bottom">
-            <footer>
-                <div class="primary-color">
-                    <div class="container text-center">
-                        <!--row-->
-                        <div class="row border border-dark">
-                            <!--Grid column-->
-<!--                            <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">-->
-                                <h6 class="mb-0 white-text">© 2021 Copyright: Cindy Chen</h6>
-                                <a href="https://github.com/cindychen5" class="icon fa-github"><span
-                                        class="label">Github</span></a>
-                                <a class="li-ic">
-                                    <i class="fab fa-linkedin white-text mr-4"> </i>
-                                </a>
-                                <a href="linkedin.com/in/cindy-chen5" class="icon fa-linkedin"><span
-                                        class="label">LinkedIn</span></a>
-                        </div>
-                        <!--row-->
-                    </div>
-                </div>
-            </footer>
+                <button type="submit" class="btn btn-primary ml-4">
+                        <i class="fa-send-o" aria-hidden="true"></i>
+                    Send</button>
+</div>
+            </form>
         </div>
     </div>
 </div>
 
-<!--Back up-->
-<!--<footer>-->
-<!--    <div class="container-fluid mt-5 mb-3">-->
-<!--        <div class="row justify-content-center">-->
-<!--            <div class="text-right">-->
-<!--                <a href="https://github.com/cindy-chen5" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>-->
-<!--                <a href="https://www.linkedin.com/in/cindychen5/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>-->
-<!--                <p>Website designed by Cindy Chen</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</footer>-->
+<!--my info-->
+<footer>
+    <div class="footer">
+        <div id="footer" class="container-fluid text-center">
+
+            <a class="icons" href="https://github.com/cindychen5"><i class="fa fa-github fa-2x fa-fw"
+                                                                     aria-hidden="true"></i></a>
+
+            <a class="icons" href="https://linkedin.com/in/cindy-chen5"><i class="fa fa-linkedin-square fa-2x fa-fw"
+                                                                           aria-hidden="true"></i></a>
+
+            <a class="icons" href="mailto:cichen58@gmail.com"><i class="fa fa-envelope fa-2x fa-fw"
+                                                                 aria-hidden="true"></i></a>
+            <h6 class="my-2 white-text display-5">© 2021 Cindy Chen</h6>
+
+        </div>
+    </div>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
