enlarged banner, changed color of name

--- a/public_html/documentation/milestone-3.html
+++ b/public_html/documentation/milestone-3.html
@@ -32,11 +32,11 @@
     <div class="p-5 text-center bg-image">
         <div class="mask">
             <div class="d-flex justify-content-center align-items-center h-100">
-                <div class="text-white">
-                    <p class="text-white mb-0">
-                    <h1 class="display-3 text-uppercase">Marcus Narro</h1>
+                <div id="center-everything">
+                    <p class=" mb-0">
+                    <h1 id="center-everything" class="display-3 text-uppercase">Marcus Narro</h1>
                     <hr id="line"/>
-                    <h2 class="h6 mb-3 text-uppercase">Creativity | Customization | Craftsmanship</h2>
+                    <h2 id="words center-everything" class="h6 mb-3 text-uppercase">Creativity | Customization | Craftsmanship</h2>
                     <a class="btn btn-outline-light btn-lg" href="#!" role="button">Contact Me</a>
                 </div>
             </div>
@@ -54,9 +54,9 @@
                      src="marcus-photo.jpg" alt="marcus photo">
             </div>
 <!--            About me column-->
-            <div class="col-lg-9 col-md-8 pl-5 ">
+            <div class="col-lg-9 col-md-8 pl-5 my-3">
                 <h3 id="hi" class="">About me:</h3>
-                <p class="lead m">I am a native New Mexican born and raised here in Albuquerque.
+                <p class="lead ">I am a native New Mexican born and raised here in Albuquerque.
                     Growing up, I spent a lot of my time with both my grandfathers, which helped foster my love for art.
                     On my mother's side, my grandfather had his own contracting company and built homes in the greater
                     Albuquerque area. In his free time, he loved to paint beautiful pictures. On my father's side, he
@@ -121,15 +121,16 @@
 <section id="gallery">
 <div class="container-fluid">
     <!-- Heading -->
-    <h2 class="mb-5 font-weight-bold text-center">Behind the Scenes</h2>
+<!--    <h2 class="mb-5 font-weight-bold text-center">Behind the Scenes</h2>-->
+
+    <h3 class="mb-3 justify-content-right"><strong>Testimonials</strong></h3>
 
     <!--Grid row-->
     <div class="row my-5 justify-content-center">
 
         <!--Grid column-->
         <div id="left column" class="col-md-6 mb-4">
-
-            <!--Carousel Wrapper-->
+                     <!--Carousel Wrapper-->
             <div id="carousel-example-1z" class="carousel slide carousel-fade carousel-fade" data-ride="carousel">
                 <!--Indicators-->
                 <ol class="carousel-indicators">
@@ -177,10 +178,9 @@
         <!--Grid column-->
 
         <!--Testimonial Grid column-->
-            <div id="right-column" class="col-md-5 overflow-auto">
+            <div id="right-column" class="col-md-5 overflow-auto ">
 
-                <!--Testimonials-->
-                <h4 class="mb-3 "><strong>Testimonials</strong></h4>
+<!--                <h3 class="mb-3"><strong>Testimonials</strong></h3>-->
                 <p>Marcus is one of the best wood workers I've worked with. He always create quality work.</p>
 
                 <p>I wasn't exactly sure how I wanted the frame for my dog portrait to look like and he took the time to
