updated mask, fixed testimonial section, added icons on bottom

--- a/public_html/documentation/milestone-3.html
+++ b/public_html/documentation/milestone-3.html
@@ -27,17 +27,19 @@
 </head>
 <body>
 
-<!--Banner-->
 <section id="banner">
     <div class="p-5 text-center bg-image">
         <div class="mask">
-            <div class="d-flex justify-content-center align-items-center h-100">
-                <div id="center-everything">
-                    <p class=" mb-0">
-                    <h1 id="center-everything" class="display-3 text-uppercase">Marcus Narro</h1>
-                    <hr id="line"/>
-                    <h2 id="words center-everything" class="h6 mb-3 text-uppercase">Creativity | Customization | Craftsmanship</h2>
-                    <a class="btn btn-outline-light btn-lg" href="#!" role="button">Contact Me</a>
+            <div class="container-fluid d-flex justify-content-center align-items-center">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-lg-12">
+
+                        <h1 class="green display-3 text-uppercase">Marcus Narro</h1>
+                        <hr id="line"/>
+                        <h2 class="h6 mb-3 text-uppercase text-white">Creativity | Customization |
+                            Craftsmanship</h2>
+                        <a class="btn btn-outline-light btn-lg" href="#!" role="button">Contact Me</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -47,14 +49,14 @@
 <!-- About section -->
 <section class="About py-4">
     <div class="container-fluid">
-        <div class="inline-flex row mx-5 pt-3">
+        <div class="inline-flex row mx-5 mx-xs-0 pt-3">
 <!--            Marcus photo column-->
             <div class="col-lg-3 col-md-4 mx-5 mx-md-0 py-1">
                 <img id="marcus-photo" class="img-fluid display-flex mx-auto"
                      src="marcus-photo.jpg" alt="marcus photo">
             </div>
 <!--            About me column-->
-            <div class="col-lg-9 col-md-8 pl-5 my-3">
+            <div class="col-lg-9 col-md-8 col-sm-12 pl-lg-5 px-sm-0 my-3">
                 <h3 id="hi" class="">About me:</h3>
                 <p class="lead ">I am a native New Mexican born and raised here in Albuquerque.
                     Growing up, I spent a lot of my time with both my grandfathers, which helped foster my love for art.
@@ -123,9 +125,7 @@
     <!-- Heading -->
 <!--    <h2 class="mb-5 font-weight-bold text-center">Behind the Scenes</h2>-->
 
-    <h3 class="mb-3 justify-content-right"><strong>Testimonials</strong></h3>
-
-    <!--Grid row-->
+      <!--Grid row-->
     <div class="row my-5 justify-content-center">
 
         <!--Grid column-->
@@ -178,9 +178,10 @@
         <!--Grid column-->
 
         <!--Testimonial Grid column-->
-            <div id="right-column" class="col-md-5 overflow-auto ">
-
-<!--                <h3 class="mb-3"><strong>Testimonials</strong></h3>-->
+            <div id="right-column" class="col-md-5 ">
+<div class="container">
+                <h3 class="mb-3 row"><strong>Testimonials</strong></h3>
+                <div class="reviews row overflow-auto ">
                 <p>Marcus is one of the best wood workers I've worked with. He always create quality work.</p>
 
                 <p>I wasn't exactly sure how I wanted the frame for my dog portrait to look like and he took the time to
@@ -202,11 +203,11 @@
                     quality to the coatings, it was perfect.</p>
                 <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to the wood
                     quality to the coatings, it was perfect.</p>
-
+                </div>
             </div>
         </div>
         <!--Grid column-->
-
+    </div>
 </div>
         <!--Grid row-->
     </div>
