--- a/public_html/documentation/milestone-3.html
+++ b/public_html/documentation/milestone-3.html
@@ -28,21 +28,14 @@
 <body>
 
 <section id="banner">
-    <div class="p-5 text-center bg-image">
-        <div class="mask">
-            <div class="container-fluid d-flex justify-content-center align-items-center">
-                <div class="row d-flex justify-content-center">
-                    <div class="col-lg-12">
+    <div class="mask">
 
-                        <h1 class="green display-3 text-uppercase">Marcus Narro</h1>
-                        <hr id="line"/>
-                        <h2 class="h6 mb-3 text-uppercase text-white">Creativity | Customization |
-                            Craftsmanship</h2>
-                        <a class="btn btn-outline-light btn-lg" href="#!" role="button">Contact Me</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <h1 class="green display-3 text-uppercase">Marcus Narro</h1>
+        <hr id="line"/>
+        <h2 class="h6 mb-3 text-uppercase text-white">Creativity | Customization |
+            Craftsmanship</h2>
+        <a class="btn btn-outline-light btn-lg" href="#!" role="button">Contact Me</a>
+
     </div>
 </section>
 
@@ -53,10 +46,10 @@
 <!--            Marcus photo column-->
             <div class="col-lg-3 col-md-4 mx-5 mx-md-0 py-1">
                 <img id="marcus-photo" class="img-fluid display-flex mx-auto"
-                     src="marcus-photo.jpg" alt="marcus photo">
+                     src="pictures/marcus-photo.jpg" alt="marcus photo">
             </div>
 <!--            About me column-->
-            <div class="col-lg-9 col-md-8 col-sm-12 pl-lg-5 px-sm-0 my-3">
+            <div class="col-lg-9 col-md-8 col-sm-12 pl-lg-5 px-sm-0 my-2">
                 <h3 id="hi" class="">About me:</h3>
                 <p class="lead ">I am a native New Mexican born and raised here in Albuquerque.
                     Growing up, I spent a lot of my time with both my grandfathers, which helped foster my love for art.
@@ -76,44 +69,44 @@
 <!--lightbox gallery-->
 <div class="container gallery">
     <div id="gallery-row" class="row">
-        <a href="brush-stand-brush.jpeg" data-toggle="lightbox" data-gallery="gallery"
+        <a href="pictures/brush-stand-brush.jpeg" data-toggle="lightbox" data-gallery="gallery"
            class="col-md-4 ">
-            <img src="brush-stand-brush.jpeg" class="img-fluid rounded shadow-lg each-pic">
+            <img src="pictures/brush-stand-brush.jpeg" class="img-fluid rounded shadow-lg each-pic" alt="brushstand">
         </a>
-        <a href="shaving-brush-stand.jpeg" data-toggle="lightbox" data-gallery="gallery"
+        <a href="pictures/shaving-brush-stand.jpeg" data-toggle="lightbox" data-gallery="gallery"
            class="col-md-4">
-            <img src="shaving-brush-stand.jpeg" class="img-fluid rounded shadow-lg each-pic">
+            <img src="pictures/shaving-brush-stand.jpeg" class="img-fluid rounded shadow-lg each-pic" alt="shavingbrush">
         </a>
-        <a href="straightrazorstand.jpeg" data-toggle="lightbox" data-gallery="gallery"
+        <a href="pictures/straightrazorstand.jpeg" data-toggle="lightbox" data-gallery="gallery"
            class="col-md-4 ">
-            <img src="straightrazorstand.jpeg" class="img-fluid rounded shadow-lg each-pic">
+            <img src="pictures/straightrazorstand.jpeg" class="img-fluid rounded shadow-lg each-pic" alt="straightrazor">
         </a>
     </div>
     <div id="gallery-row" class="row">
-        <a href="coasters.jpeg" data-toggle="lightbox" data-gallery="gallery"
+        <a href="pictures/coasters.jpeg" data-toggle="lightbox" data-gallery="gallery"
            class="col-md-4">
-            <img src="coasters.jpeg" class="img-fluid rounded each-pic">
+            <img src="pictures/coasters.jpeg" class="img-fluid rounded each-pic" alt="coasters">
         </a>
-        <a href="espresso-coaster.jpg" data-toggle="lightbox" data-gallery="gallery"
+        <a href="pictures/espresso-coaster.jpg" data-toggle="lightbox" data-gallery="gallery"
            class="col-md-4 ">
-            <img src="espresso-coaster.jpg" class="img-fluid rounded each-pic">
+            <img src="pictures/espresso-coaster.jpg" class="img-fluid rounded each-pic" alt="espressocoaster">
         </a>
-        <a href="espresso-coaster.jpg" data-toggle="lightbox" data-gallery="gallery"
+        <a href="pictures/espresso-coaster.jpg" data-toggle="lightbox" data-gallery="gallery"
            class="col-md-4 ">
-            <img src="espresso-coaster.jpg" class="img-fluid rounded each-pic">
+            <img src="pictures/espresso-coaster.jpg" class="img-fluid rounded each-pic" alt="espressocoaster">
         </a>
         <div id="gallery-row" class="row">
-            <a href="landscape.jpeg" data-toggle="lightbox" data-gallery="gallery"
+            <a href="pictures/landscape.jpeg" data-toggle="lightbox" data-gallery="gallery"
                class="col-md-4">
-                <img src="landscape.jpeg" class="img-fluid rounded  each-pic">
+                <img src="pictures/landscape.jpeg" class="img-fluid rounded  each-pic" alt="landscape">
             </a>
-            <a href="diploma-frames.jpg" data-toggle="lightbox" data-gallery="gallery"
+            <a href="pictures/diploma-frames.jpg" data-toggle="lightbox" data-gallery="gallery"
                class="col-md-4 ">
-                <img src="diploma-frames.jpg" class="img-fluid rounded each-pic">
+                <img src="pictures/diploma-frames.jpg" class="img-fluid rounded each-pic" alt="diploma">
             </a>
-            <a href="frame.jpeg" data-toggle="lightbox" data-gallery="gallery"
+            <a href="pictures/frame.jpeg" data-toggle="lightbox" data-gallery="gallery"
                class="col-md-4 ">
-                <img src="frame.jpeg" class="img-fluid rounded each-pic">
+                <img src="pictures/frame.jpeg" class="img-fluid rounded each-pic" alt="frame">
             </a>
         </div>
     </div>
@@ -121,95 +114,101 @@
 
 <!--Behind the scenes-->
 <section id="gallery">
-<div class="container-fluid">
-    <!-- Heading -->
-<!--    <h2 class="mb-5 font-weight-bold text-center">Behind the Scenes</h2>-->
-
-      <!--Grid row-->
-    <div class="row my-5 justify-content-center">
-
-        <!--Grid column-->
-        <div id="left column" class="col-md-6 mb-4">
-                     <!--Carousel Wrapper-->
-            <div id="carousel-example-1z" class="carousel slide carousel-fade carousel-fade" data-ride="carousel">
-                <!--Indicators-->
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-1z" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-1z" data-slide-to="2"></li>
-                </ol>
-                <!--/.Indicators-->
-                <!--Slides-->
-                <div class="carousel-inner z-depth-1-half" role="listbox">
-                    <!--First slide-->
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="carving.jpg"
-                             alt="First slide">
-                    </div>
-                    <!--/First slide-->
-                    <!--Second slide-->
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="drilling.jpg"
-                             alt="Second slide">
-                    </div>
-                    <!--/Second slide-->
-                    <!--Third slide-->
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="planing.jpg"
-                             alt="Third slide">
-                    </div>
-                    <!--/Third slide-->
-                </div>
-                <!--/.Slides-->
-                <!--Controls-->
-                <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-                <!--/.Controls-->
-            </div>
-            <!--/.Carousel Wrapper-->
-
-        </div>
-        <!--Grid column-->
-
-        <!--Testimonial Grid column-->
-            <div id="right-column" class="col-md-5 ">
-<div class="container">
-                <h3 class="mb-3 row"><strong>Testimonials</strong></h3>
-                <div class="reviews row overflow-auto ">
-                <p>Marcus is one of the best wood workers I've worked with. He always create quality work.</p>
-
-                <p>I wasn't exactly sure how I wanted the frame for my dog portrait to look like and he took the time to
-                    relay his vision for the frame. I would highly recommend.</p>
-
-                <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to the wood
-                    quality to the coatings, it was perfect.</p>
-                <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to the wood
-                    quality to the coatings, it was perfect.</p>
-                <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to the wood
-                    quality to the coatings, it was perfect.</p>
-                <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to the wood
-                    quality to the coatings, it was perfect.</p>
-                <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to the wood
-                    quality to the coatings, it was perfect.</p>
-                <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to the wood
-                    quality to the coatings, it was perfect.</p>
-                <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to the wood
-                    quality to the coatings, it was perfect.</p>
-                <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to the wood
-                    quality to the coatings, it was perfect.</p>
-                </div>
-            </div>
-        </div>
-        <!--Grid column-->
-    </div>
-</div>
+    <div class="container-fluid">
         <!--Grid row-->
+        <div class="row my-5 justify-content-center">
+            <!--Grid column-->
+            <div id="left column" class="col-md-6 mb-4">
+                <!--Carousel Wrapper-->
+                <div id="carousel-example-1z" class="carousel slide carousel-fade carousel-fade" data-ride="carousel">
+                    <!--Indicators-->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-1z" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-1z" data-slide-to="2"></li>
+                    </ol>
+                    <!--/.Indicators-->
+                    <!--Slides-->
+                    <div class="carousel-inner z-depth-1-half" role="listbox">
+                        <!--First slide-->
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="pictures/carving.jpg"
+                                 alt="First slide">
+                        </div>
+                        <!--/First slide-->
+                        <!--Second slide-->
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="pictures/drilling.jpg"
+                                 alt="Second slide">
+                        </div>
+                        <!--/Second slide-->
+                        <!--Third slide-->
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="pictures/planing.jpg"
+                                 alt="Third slide">
+                        </div>
+                        <!--/Third slide-->
+
+                    </div>
+                    <!--/.Slides-->
+                    <!--Controls-->
+                    <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                    <!--/.Controls-->
+                </div>
+                <!--/.Carousel Wrapper-->
+
+            </div>
+            <!--Grid column-->
+
+            <!--Testimonial Grid column-->
+            <div id="right-column" class="col-md-5 ">
+                <div class="container">
+                    <h3 class="mb-3 row"><strong>Testimonials</strong></h3>
+                    <div class="reviews row overflow-auto ">
+                        <p>Marcus is one of the best wood workers I've worked with. He always create quality work.</p>
+
+                        <p>I wasn't exactly sure how I wanted the frame for my dog portrait to look like and he took the
+                            time to
+                            relay his vision for the frame. I would highly recommend.</p>
+
+                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
+                            the wood
+                            quality to the coatings, it was perfect.</p>
+                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
+                            the wood
+                            quality to the coatings, it was perfect.</p>
+                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
+                            the wood
+                            quality to the coatings, it was perfect.</p>
+                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
+                            the wood
+                            quality to the coatings, it was perfect.</p>
+                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
+                            the wood
+                            quality to the coatings, it was perfect.</p>
+                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
+                            the wood
+                            quality to the coatings, it was perfect.</p>
+                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
+                            the wood
+                            quality to the coatings, it was perfect.</p>
+                        <p>Marcus made me a shaving brush stand and it was such a beautiful piece. From the design, to
+                            the wood
+                            quality to the coatings, it was perfect.</p>
+                    </div>
+                </div>
+            </div>
+            <!--Grid column-->
+        </div>
+
+    <!--Grid row-->
     </div>
 </section>
 <!--Behind the Scenes/Testimonial-->
@@ -270,7 +269,7 @@
                                     sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox"></iframe>
                         </div>
                         <textarea id="g-recaptcha-response" name="g-recaptcha-response" class="g-recaptcha-response"
-                                  style="width: 250px; height: 40px; border: 1px solid rgb(193, 193, 193); margin: 10px 25px; padding: 0px; resize: none; display: none;"></textarea>
+                                  style="width: 250px; height: 40px; border: 1px solid rgb(193, 193, 193); margin: 10px 25px; padding: 0; resize: none; display: none;"></textarea>
                     </div>
                     <iframe style="display: none;"></iframe>
                 </div>
@@ -283,7 +282,6 @@
 <div class="send">
 
                 <button type="submit" class="btn btn-primary ml-4">
-                        <i class="fa-send-o" aria-hidden="true"></i>
                     Send</button>
 </div>
             </form>
