cleaned up photos & code styling

--- a/public_html/documentation/milestone-3.html
+++ b/public_html/documentation/milestone-3.html
@@ -45,12 +45,12 @@
         <div class="inline-flex row mx-5 mx-xs-0 pt-3">
 <!--            Marcus photo column-->
             <div class="col-lg-3 col-md-4 mx-5 mx-md-0 py-1">
-                <img id="marcus-photo" class="img-fluid display-flex mx-auto"
+                <img id="marcus-photo" class="img-fluid display-block mx-auto"
                      src="pictures/marcus-photo.jpg" alt="marcus photo">
             </div>
 <!--            About me column-->
             <div class="col-lg-9 col-md-8 col-sm-12 pl-lg-5 px-sm-0 my-2">
-                <h3 id="hi"><span id="bold">About me:</span></h3>
+                <h3 id="hi"><span>About me:</span></h3>
                 <p class="lead ">I am a native New Mexican born and raised here in Albuquerque.
                     Growing up, I spent a lot of my time with both my grandfathers, which helped foster my love for art.
                     On my mother's side, my grandfather had his own contracting company and built homes in the greater
@@ -67,7 +67,7 @@
 </section>
 
 <!--lightbox gallery-->
-<div class="container gallery">
+<div class="container">
     <div id="gallery-row" class="row">
         <a href="pictures/brush-stand-brush.jpeg" data-toggle="lightbox" data-gallery="gallery"
            class="col-md-4 ">
@@ -105,9 +105,9 @@
                class="col-md-4">
                 <img src="pictures/new-frame.jpg" class="img-fluid rounded each-pic" alt="newframe">
             </a>
-            <a href="pictures/frame.jpeg" data-toggle="lightbox" data-gallery="gallery"
+            <a href="pictures/new-frame.jpg" data-toggle="lightbox" data-gallery="gallery"
                class="col-md-4 ">
-                <img src="pictures/frame.jpeg" class="img-fluid rounded each-pic" alt="frame">
+                <img src="pictures/new-frame.jpg" class="img-fluid rounded each-pic" alt="frame">
             </a>
     </div>
 </div>
@@ -170,7 +170,7 @@
             <!--Testimonial Grid column-->
             <div id="right-column" class="col-md-5 ">
                 <div class="container">
-                    <h3 class="mb-3 row"><span id="bold">Testimonials</span></h3>
+                    <h3 class="mb-3 row"><span>Testimonials</span></h3>
                     <div class="reviews row overflow-auto ">
                         <p>Marcus is one of the best wood workers I've worked with. He always create quality work.</p>
 
@@ -216,7 +216,7 @@
 <!--Contact Form-->
 <div class="container">
         <h3 class="ml-5 mb-3">
-            <span id="bold">Contact</span>
+            <span>Contact</span>
         </h3>
         <form id="contact-form" action="php/mailer.php" method="post" novalidate="novalidate">
             <!--                name line-->
