fixed duplicate gallery-row and left-column

--- a/public_html/documentation/milestone-3.html
+++ b/public_html/documentation/milestone-3.html
@@ -68,7 +68,7 @@
 
 <!--lightbox gallery-->
 <div class="container">
-    <div id="gallery-row" class="row">
+    <div class="row gallery-row">
         <a href="pictures/brush-stand-brush.jpeg" data-toggle="lightbox" data-gallery="gallery"
            class="col-md-4 ">
             <img src="pictures/brush-stand-brush.jpeg" class="img-fluid rounded each-pic" alt="brushstand">
@@ -82,7 +82,7 @@
             <img src="pictures/top-view.jpg" class="img-fluid rounded each-pic" alt="topview">
         </a>
     </div>
-    <div id="gallery-row" class="row">
+    <div class="row gallery-row">
         <a href="pictures/landscape2.jpg" data-toggle="lightbox" data-gallery="gallery"
            class="col-md-4">
             <img src="pictures/landscape2.jpg" class="img-fluid rounded each-pic" alt="landscape">
@@ -96,7 +96,7 @@
             <img src="pictures/espresso-coaster.jpg" class="img-fluid rounded each-pic" alt="espressocoaster">
         </a>
     </div>
-    <div id="gallery-row" class="row">
+    <div class="row gallery-row">
             <a href="pictures/neu-diploma.jpg" data-toggle="lightbox" data-gallery="gallery"
                class="col-md-4">
                 <img src="pictures/neu-diploma.jpg" class="img-fluid rounded each-pic" alt="neudiploma">
@@ -118,7 +118,7 @@
         <!--Grid row-->
         <div class="row my-5 justify-content-center">
             <!--Grid column-->
-            <div id="left column" class="col-md-6 mb-4">
+            <div id="left-column" class="col-md-6 mb-4">
                 <!--Carousel Wrapper-->
                 <div id="carousel-example-1z" class="carousel slide carousel-fade carousel-fade" data-ride="carousel">
                     <!--Indicators-->
@@ -231,8 +231,8 @@
                                 <input type="text" class="form-control" placeholder="Your Name">
                             </div>
                         </div>
-                        <!--                email address-->
-                        <div class="form-group">
+                            <!--                email address-->
+                            <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-addon">
                                     <i class="fa fa-envelope fa-fw" aria-hidden="true"></i>
@@ -241,7 +241,7 @@
                             </div>
                         </div>
 
-                        <!--                phone number-->
+
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-addon">
