updated contact button to link

--- a/public_html/documentation/milestone-3.html
+++ b/public_html/documentation/milestone-3.html
@@ -34,7 +34,7 @@
         <hr id="line"/>
         <h2 class="h6 mb-3 text-uppercase text-white">Creativity | Customization |
             Craftsmanship</h2>
-        <a class="btn btn-outline-light btn-lg" href="#!" role="button">Contact Me</a>
+        <a class="btn btn-outline-light btn-lg" href="#contact-form" role="button">Contact Me</a>
 
     </div>
 </section>
